[gd_scene load_steps=6 format=2]

[ext_resource path="res://Objects/Characters/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Resources/AutumnForest.tres" type="TileSet" id=2]
[ext_resource path="res://Scripts/Levels/Overworld/Overworld_1.gd" type="Script" id=3]
[ext_resource path="res://Objects/Interactables/Portal.tscn" type="PackedScene" id=4]
[ext_resource path="res://Resources/Dialog.tres" type="TileSet" id=5]

[node name="Overworld" type="Node2D"]
script = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 116.694, 473.551 )

[node name="Map" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -3, 43, 0, -2, 43, 0, -1, 43, 0, -65521, 92, 0, -65520, 93, 0, -65519, 93, 0, -65518, 93, 0, -65517, 93, 0, -65516, 93, 0, -65515, 93, 0, -65514, 94, 0, 65533, 43, 0, 65534, 43, 0, 65535, 43, 0, 0, 25, 0, 1, 25, 0, 2, 25, 0, 3, 25, 0, 4, 25, 0, 5, 11, 0, 6, 22, 0, 7, 22, 0, 8, 22, 0, 9, 22, 0, 10, 22, 0, 11, 22, 0, 12, 9, 0, 13, 20, 0, 15, 92, 0, 16, 93, 0, 17, 93, 0, 18, 93, 0, 19, 93, 0, 20, 103, 0, 21, 93, 0, 22, 94, 0, 30, 43, 0, 31, 43, 0, 32, 43, 0, 131069, 43, 0, 131070, 43, 0, 131071, 43, 0, 65536, 25, 0, 65537, 25, 0, 65538, 25, 0, 65539, 25, 0, 65540, 25, 0, 65541, 14, 0, 65548, 12, 0, 65549, 20, 0, 65551, 92, 0, 65552, 103, 0, 65553, 93, 0, 65554, 102, 0, 65555, 93, 0, 65556, 93, 0, 65557, 101, 0, 65558, 97, 0, 65566, 43, 0, 65567, 43, 0, 65568, 43, 0, 196605, 43, 0, 196606, 43, 0, 196607, 43, 0, 131072, 7, 0, 131073, 7, 0, 131074, 7, 0, 131075, 7, 0, 131076, 7, 0, 131077, 8, 0, 131084, 24, 0, 131085, 20, 0, 131087, 95, 0, 131088, 100, 0, 131089, 93, 0, 131090, 93, 0, 131091, 93, 0, 131092, 93, 0, 131093, 94, 0, 131102, 43, 0, 131103, 43, 0, 131104, 43, 0, 262141, 43, 0, 262142, 43, 0, 262143, 43, 0, 196620, 21, 0, 196621, 23, 0, 196624, 95, 0, 196625, 96, 0, 196626, 85, 0, 196627, 96, 0, 196628, 96, 0, 196629, 97, 0, 196636, 110, 0, 196638, 43, 0, 196639, 43, 0, 196640, 43, 0, 327677, 43, 0, 327678, 43, 0, 327679, 43, 0, 262162, 30, 0, 262172, 110, 0, 262174, 43, 0, 262175, 43, 0, 262176, 43, 0, 393213, 43, 0, 393214, 43, 0, 393215, 43, 0, 327698, 30, 0, 327707, 39, 0, 327708, 40, 0, 327709, 40, 0, 327710, 43, 0, 327711, 43, 0, 327712, 43, 0, 458749, 43, 0, 458750, 43, 0, 458751, 43, 0, 393234, 30, 0, 393243, 42, 0, 393244, 43, 0, 393245, 43, 0, 393246, 43, 0, 393247, 43, 0, 393248, 43, 0, 524285, 43, 0, 524286, 43, 0, 524287, 43, 0, 458770, 30, 0, 458771, 110, 0, 458775, 64, 0, 458776, 65, 0, 458777, 65, 0, 458778, 66, 0, 458779, 42, 0, 458780, 43, 0, 458781, 53, 0, 458782, 43, 0, 458783, 43, 0, 458784, 43, 0, 589821, 43, 0, 589822, 43, 0, 589823, 43, 0, 524303, 110, 0, 524306, 32, 0, 524307, 110, 0, 524308, 104, 0, 524311, 67, 0, 524312, 68, 0, 524313, 77, 0, 524314, 69, 0, 524315, 42, 0, 524316, 50, 0, 524317, 43, 0, 524318, 43, 0, 524319, 43, 0, 524320, 43, 0, 655357, 43, 0, 655358, 43, 0, 655359, 43, 0, 589838, 109, 0, 589839, 110, 0, 589840, 108, 0, 589841, 15, 0, 589842, 16, 0, 589843, 16, 0, 589844, 17, 0, 589845, 64, 0, 589846, 65, 0, 589847, 73, 0, 589848, 68, 0, 589849, 68, 0, 589850, 69, 0, 589851, 45, 0, 589852, 46, 0, 589853, 51, 0, 589854, 43, 0, 589855, 43, 0, 589856, 43, 0, 720893, 43, 0, 720894, 43, 0, 720895, 43, 0, 655373, 0, 0, 655374, 1, 0, 655375, 1, 0, 655376, 1, 0, 655377, 13, 0, 655378, 19, 0, 655379, 28, 0, 655380, 20, 0, 655381, 67, 0, 655382, 76, 0, 655383, 62, 0, 655384, 60, 0, 655385, 61, 0, 655386, 72, 0, 655389, 42, 0, 655390, 43, 0, 655391, 43, 0, 655392, 43, 0, 786429, 43, 0, 786430, 43, 0, 786431, 43, 0, 720909, 24, 0, 720910, 25, 0, 720911, 25, 0, 720912, 25, 0, 720913, 28, 0, 720914, 28, 0, 720915, 19, 0, 720916, 20, 0, 720917, 70, 0, 720918, 72, 0, 720919, 33, 0, 720920, 31, 0, 720921, 34, 0, 720925, 42, 0, 720926, 43, 0, 720927, 43, 0, 720928, 43, 0, 851965, 43, 0, 851966, 43, 0, 851967, 43, 0, 786438, 81, 0, 786439, 54, 0, 786445, 21, 0, 786446, 22, 0, 786447, 22, 0, 786448, 22, 0, 786449, 22, 0, 786450, 22, 0, 786451, 22, 0, 786452, 23, 0, 786456, 30, 0, 786461, 45, 0, 786462, 43, 0, 786463, 43, 0, 786464, 43, 0, 917501, 43, 0, 917502, 43, 0, 917503, 43, 0, 851973, 0, 0, 851974, 1, 0, 851975, 1, 0, 851976, 2, 0, 851992, 30, 0, 851998, 43, 0, 851999, 43, 0, 852000, 43, 0, 983037, 43, 0, 983038, 43, 0, 983039, 43, 0, 917509, 3, 0, 917510, 25, 0, 917511, 25, 0, 917512, 5, 0, 917524, 110, 0, 917528, 30, 0, 917534, 43, 0, 917535, 43, 0, 917536, 43, 0, 1048573, 43, 0, 1048574, 43, 0, 1048575, 43, 0, 983045, 3, 0, 983046, 25, 0, 983047, 25, 0, 983048, 5, 0, 983052, 108, 0, 983053, 109, 0, 983060, 110, 0, 983062, 81, 0, 983064, 32, 0, 983065, 84, 0, 983070, 43, 0, 983071, 43, 0, 983072, 43, 0, 1114109, 43, 0, 1114110, 43, 0, 1114111, 1, 0, 1048576, 1, 0, 1048577, 1, 0, 1048578, 1, 0, 1048579, 1, 0, 1048580, 1, 0, 1048581, 13, 0, 1048582, 25, 0, 1048583, 25, 0, 1048584, 10, 0, 1048585, 1, 0, 1048586, 1, 0, 1048587, 1, 0, 1048588, 1, 0, 1048589, 1, 0, 1048590, 1, 0, 1048591, 1, 0, 1048592, 1, 0, 1048593, 1, 0, 1048594, 1, 0, 1048595, 1, 0, 1048596, 1, 0, 1048597, 1, 0, 1048598, 1, 0, 1048599, 1, 0, 1048600, 1, 0, 1048601, 1, 0, 1048602, 1, 0, 1048603, 1, 0, 1048604, 1, 0, 1048605, 1, 0, 1048606, 1, 0, 1048607, 1, 0, 1048608, 1, 0 )

[node name="Dialog" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 7, 0, 2, 7, 0, 3, 7, 0, 4, 7, 0, 5, 7, 0, 6, 7, 0, 7, 7, 0, 8, 7, 0, 9, 7, 0, 10, 7, 0, 11, 7, 0, 12, 7, 0, 13, 7, 0, 14, 7, 0, 15, 7, 0, 16, 7, 0, 17, 7, 0, 18, 7, 0, 19, 1, 0, 65536, 4, 0, 65537, 53, 0, 65538, 41, 0, 65539, 38, 0, 65540, 8, 0, 65541, 45, 0, 65542, 54, 0, 65543, 52, 0, 65544, 41, 0, 65545, 42, 0, 65546, 47, 0, 65547, 40, 0, 65548, 8, 0, 65549, 39, 0, 65550, 42, 0, 65551, 38, 0, 65552, 45, 0, 65553, 37, 0, 65554, 52, 0, 65555, 5, 0, 131072, 2, 0, 131073, 6, 0, 131074, 6, 0, 131075, 6, 0, 131076, 6, 0, 131077, 6, 0, 131078, 6, 0, 131079, 6, 0, 131080, 6, 0, 131081, 6, 0, 131082, 6, 0, 131083, 6, 0, 131084, 6, 0, 131085, 6, 0, 131086, 6, 0, 131087, 6, 0, 131088, 6, 0, 131089, 6, 0, 131090, 6, 0, 131091, 3, 0, 196608, 62, 0, 196609, 69, 0, 196610, 69, 0, 196611, 69, 0, 196612, 66, 0, 196663, 0, 0, 196664, 7, 0, 196665, 7, 0, 196666, 1, 0, 262144, 64, 0, 262145, 88, 0, 262146, 80, 0, 262147, 89, 0, 262148, 68, 0, 262199, 4, 0, 262200, 45, 0, 262201, 29, 0, 262202, 5, 0, 327680, 63, 0, 327681, 65, 0, 327682, 65, 0, 327683, 65, 0, 327684, 67, 0, 327735, 2, 0, 327736, 6, 0, 327737, 6, 0, 327738, 3, 0, 720933, 0, 0, 720934, 7, 0, 720935, 7, 0, 720936, 1, 0, 786469, 4, 0, 786470, 45, 0, 786471, 27, 0, 786472, 5, 0, 851997, 0, 0, 851998, 7, 0, 851999, 7, 0, 852000, 1, 0, 852005, 2, 0, 852006, 6, 0, 852007, 6, 0, 852008, 3, 0, 917533, 4, 0, 917534, 45, 0, 917535, 26, 0, 917536, 5, 0, 983069, 2, 0, 983070, 6, 0, 983071, 6, 0, 983072, 3, 0, 1638400, 0, 0, 1638401, 7, 0, 1638402, 7, 0, 1638403, 7, 0, 1638404, 7, 0, 1638405, 7, 0, 1638406, 1, 0, 1638439, 0, 0, 1638440, 7, 0, 1638441, 7, 0, 1638442, 1, 0, 1638455, 0, 0, 1638456, 7, 0, 1638457, 7, 0, 1638458, 1, 0, 1703936, 4, 0, 1703937, 315, 0, 1703938, 35, 0, 1703939, 95, 0, 1703940, 36, 0, 1703941, 44, 0, 1703942, 5, 0, 1703975, 4, 0, 1703976, 45, 0, 1703977, 28, 0, 1703978, 5, 0, 1703991, 4, 0, 1703992, 19, 0, 1703993, 20, 0, 1703994, 5, 0, 1769472, 2, 0, 1769473, 6, 0, 1769474, 6, 0, 1769475, 6, 0, 1769476, 6, 0, 1769477, 6, 0, 1769478, 3, 0, 1769511, 2, 0, 1769512, 6, 0, 1769513, 6, 0, 1769514, 3, 0, 1769527, 2, 0, 1769528, 6, 0, 1769529, 6, 0, 1769530, 3, 0 )

[node name="PortalBack" parent="." instance=ExtResource( 4 )]
position = Vector2( 19.3063, 480.055 )

[node name="PortalNextSubarea" parent="." instance=ExtResource( 4 )]
position = Vector2( 911.536, 480.069 )
[connection signal="body_entered" from="PortalBack" to="." method="on_portal_body_entered"]
[connection signal="body_exited" from="PortalBack" to="." method="on_portal_body_exited"]
[connection signal="body_entered" from="PortalNextSubarea" to="." method="_on_portalNextSubarea_body_entered"]
[connection signal="body_exited" from="PortalNextSubarea" to="." method="_on_portalNextSubarea_body_exited"]
